n8n/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:latest
          ports:
            - containerPort: 5678
          volumeMounts:
            - mountPath: /home/node/n8n
              name: n8n-storage
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "1"
        - name: n8n-python-runner
          image: n8nio/n8n-python-runner:latest
          ports:
            - containerPort: 5679
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "0.5"
      volumes:
        - name: n8n-storage
          persistentVolumeClaim:
            claimName: n8n-pvc
